This is working shockingly well

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ justify-content: center;
 }
 .activeWatch{
     
-    width: 50vw;
+    width: 75%;
     height: 75vh;
     margin: auto;
     padding: auto;
