--- a/src/App.css
+++ b/src/App.css
@@ -44,18 +44,17 @@
 
 .answersParent{
     display: grid;
-  grid-template-rows: 5% 95%;
+    height: 100%;
+  grid-template-rows: 10% 90%;
 }
 
 
 .answersDiv {
     padding: 5%;
     height: 100%;
-    border: 5px solid black;
   border-radius: 15%;
   display: grid;
   grid-template-rows: 2fr 1fr 1fr 1fr 1fr 2fr;
-
   gap: 15%;
   height: auto;
 
@@ -105,11 +104,61 @@ background-color:aliceblue;
 }
 .toolBox{
     display: flex;
-    width: 100%;
 
+    grid-row-start: 1;
+  grid-row-end: 2;
+    
+
+}
+.toolBox div{
+  flex: 1;
+}
+
+.toolBox button{
+  width: 100%;
+  height: 100%;
 }
 
 .score{
     padding: 5px;
     text-align: center;
+}
+
+.correctanswer{
+
+    animation: goodglowing 1300ms infinite;
+
+}
+.wronganswer{
+  animation: badglowing 1300ms infinite;
+}
+
+@keyframes goodglowing {
+  0% {
+    background-color: #2ba805;
+    box-shadow: 0 0 3px #2ba805;
+  }
+  50% {
+    background-color: #49e819;
+    box-shadow: 0 0 10px #49e819;
+  }
+  100% {
+    background-color: #2ba805;
+    box-shadow: 0 0 3px #2ba805;
+  }
+}
+
+@keyframes badglowing {
+  0% {
+    background-color: #ca0e0e;
+    box-shadow: 0 0 3px #ca0e0e;
+  }
+  50% {
+    background-color: #c14848;
+    box-shadow: 0 0 10px #c14848;
+  }
+  100% {
+    background-color: #ca0e0e;
+    box-shadow: 0 0 3px #ca0e0e;
+  }
 }
