--- a/src/App.css
+++ b/src/App.css
@@ -132,6 +132,21 @@ background-color:aliceblue;
 .wronganswer{
   animation: badglowing 1300ms infinite;
 }
+.spin{
+  animation-name: spin;
+  animation-duration: 1000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes spin {
+  from {
+      transform:rotate(0deg);
+  }
+  to {
+      transform:rotate(360deg);
+  }
+}
 
 @keyframes goodglowing {
   0% {
@@ -162,3 +177,4 @@ background-color:aliceblue;
     box-shadow: 0 0 3px #ca0e0e;
   }
 }
+
