--- a/src/App.css
+++ b/src/App.css
@@ -43,22 +43,23 @@
 }
 
 .answersParent{
-    display: grid;
+    display: flex;
+    flex-direction: column;
     height: 100%;
-  grid-template-rows: 10% 90%;
 }
 
 
 .answersDiv {
+    flex-grow: 1;
     padding: 5%;
     height: 100%;
   border-radius: 15%;
   display: grid;
   grid-template-rows: 2fr 1fr 1fr 1fr 1fr 2fr;
   gap: 15%;
-  height: auto;
 
 }
+
 
 .answersDiv > button{
 padding: 15px;
@@ -137,6 +138,29 @@ background-color:aliceblue;
   animation-duration: 1000ms;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
+}
+
+
+.activeWatch:hover, .activeWatch:active {
+  display: block;
+}
+
+.activeWatch:hover .picZoom, .activeWatch:active .picZoom {
+  opacity: 1;
+}
+
+.picZoom {
+  width: 340px;
+  height: 340px;
+  box-shadow: 0 5px 10px -2px rgba(0,0,0,0.3);
+  pointer-events: none;
+  position: absolute;
+  opacity: 0;
+  border: 4px solid whitesmoke;
+  z-index: 99;
+  border-radius: 100%;
+  display: block;
+  transition: opacity .2s;
 }
 
 @keyframes spin {
