--- a/src/App.css
+++ b/src/App.css
@@ -11,21 +11,27 @@
 .questionDisplay {
     grid-column-start: 1;
   grid-column-end: 2;
-  display: grid;
-  grid-template-columns: 12.5% 75% 12.5%;
+  display: inline-block;
 }
 
 .leftButton {
-    grid-column-start: 1;
-  grid-column-end: 2;
+    position: absolute;
+    padding: 15px;
+    font-size: xx-large;
+  bottom: 10px;
+  border-radius: 25%;
 
 }
 
 .rightButton {
-  grid-column-start: 3;
-  grid-column-end: 4;
+  position: absolute;
+  padding: 15px;
+    font-size: xx-large;
+  bottom: 10px;
+  border-radius: 25%;
 }
 .activeWatch {
+    display: block;
     grid-column-start: 2;
   grid-column-end: 3;
   height: 100vh;
@@ -35,8 +41,8 @@
 }
 
 .activeWatch > img {
+    
   border-radius: 25%;
-  margin: auto;
   max-width: 100%;
   max-height: 100%;
   transition: all 2.5s;
